[project]
name = "pulse-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "google-cloud-videointelligence>=2.17.0",
    "motor>=3.7.1",
    "pydantic[email]>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.1",
    "uvicorn>=0.40.0",
]
